# Task_and_Project_Management_System

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 08bbae83a5a0_add_comment_model.py  32265bd0706b_initial_reveision.py  eb618471826c_project_task_relationship.py
src/: main.py
src/core/: config.py  security.py
src/db/: base.py  session.py
src/models/: comment.py  project.py  task.py  user.py
src/repository/: comment_repo.py  project_repo.py  task_repo.py  user_repo.py
src/routers/: auth.py  comment.py  deps.py  project.py  task.py
src/schema/: auth.py  comment.py  project.py  task.py  user.py
src/service/: auth_service.py  comment_service.py  project_service.py  task_service.py
