[project]
name = "college-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Harsh Khapekar",email = "harshkhapekar1@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic[email] (>=2.13.3,<3.0.0)",
    "bcrypt (==3.2.2)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
